# wallpaper-rs

./: Cargo.toml
src/: main.rs
