[package]
name = "wallpaper-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objc = "0.2.7"
cocoa = "0.24.0"
clap = { version = "3.2", features = ["cargo"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
directories = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
